--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,3 +4,7 @@
 
 <em><%= @portfolio_item.subtitle %></em>
 <p><%= @portfolio_item.body %></p>
+
+<% @portfolio_item.technologies.each do |t| %>
+  <p><%= t.name %></p>
+<% end %>
