--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,9 @@
     <% end %>
 
     <%= yield %>
+
+    <% if session[:source] %>
+      Thank for visiting me from <%= session[:source] %>
+    <% end %>
   </body>
 </html>
