--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Blog</h1>
+<div class="col-md-8 blog-main">
+  <h2 class="pb-4 mb-4 font-italic border-bottom">
+    Editing Blog
+  </h2>
+  <%= render 'form', blog: @blog %>
 
-<%= render 'form', blog: @blog %>
+  <%= link_to 'Back', blogs_path %>
 
-<%= link_to 'Show', @blog %> |
-<%= link_to 'Back', blogs_path %>
+</div><!-- /.blog-main -->
