--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,22 +1,9 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-8 blog-main">
+  <%= paginate @blogs %>
+  <%= render @blogs %>
 
-<h1>Blogs</h1>
+  <%= paginate @blogs %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Date</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+</div><!-- /.blog-main -->
 
-  <tbody>
-    <%= render @blogs %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %>
