--- a/app/views/portfolios/_portfolio_item.erb
+++ b/app/views/portfolios/_portfolio_item.erb
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div class="col-md-4 portfolio-item-card" data-id="<%= portfolio_item.id %>">
   <div class="card mb-4 shadow-sm">
     <%= image_tag portfolio_item.thumb_image, class: 'bd-placeholder-img card-img-top' unless portfolio_item.thumb_image.nil? %>
 
@@ -7,16 +7,12 @@
         <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></span>
         <%= portfolio_item.subtitle %>
       </p>
-      <p class="card-text"><%= portfolio_item.body %></p>
 
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-          <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
-          <%= link_to "Delete", portfolio_path(portfolio_item.id), method: :delete, data: {confirm: 'Are you sure?'} if logged_in?(:site_admin) %>
+          <%= link_to "Edit", edit_portfolio_path(portfolio_item.id), class: "btn btn-sm btn-outline-secondary" if logged_in?(:site_admin) %>
+          <%= link_to "Delete", portfolio_path(portfolio_item.id), class: "btn btn-sm btn-outline-secondary", method: :delete, data: {confirm: 'Are you sure?'} if logged_in?(:site_admin) %>
         </div>
-        <small class="text-muted">9 mins</small>
       </div>
     </div>
   </div>
