--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About me</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+    <%= image_tag "150.png", width: 150, alt: '' %>
+  </div>
+
+  <div class="col-md-8">
+    <p>Find me in app/views/pages/about.html.erb</p>
+  </div>
+</div>
