--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -11,11 +11,14 @@
         <%= form.text_area :subtitle, id: :portfolio_subtitle, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= form.file_field :main_image, class: 'form-control' %>
+        <label class="btn btn-primary">
+          Upload a main image file <%= form.file_field :main_image, style: 'display: none;' %>
+        </label>
       </div>
       <div class="form-group">
-        <%= form.file_field :thumb_image, class: 'form-control' %>
-
+        <label class="btn btn-primary">
+          Upload a main image file <%= form.file_field :thumb_image, style: 'display: none;' %>
+        </label>
       </div>
 
     </div>
