Added comment form and validation.

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,4 +8,8 @@
     <%= @blog.body %>
   </p>
 
+  <%= render 'comments/comment_form' %>
+
+  <%= render @blog.comments %>
+
 </div><!-- /.blog-main -->
