--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -118,6 +118,7 @@ h1, h2, h3, h4, h5, h6 {
  * Footer
  */
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -133,4 +134,13 @@ h1, h2, h3, h4, h5, h6 {
  */
 .social-links li {
   font-size: 2rem;
+}
+
+.comment-card > .card {
+  margin-top: 15px;
+}
+
+.comment-info {
+  font-size: .8em;
+  font-style: italic;
 }
