--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -11,6 +11,14 @@
   </div>
 
   <div class="form-group">
+    <%= form.label :topic_id %>
+    <%= form.collection_select(:topic_id, Topic.all, :id, :title, {
+        selected: (blog.topic.id unless blog.topic.nil?),
+        include_blank: true,
+    }, class: 'form-control') %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :body %>
     <%= form.text_area :body, id: :blog_body, class: 'form-control', rows: 15 %>
   </div>
