--- a/app/views/shared/_blog_header.html.erb
+++ b/app/views/shared/_blog_header.html.erb
@@ -1,6 +1,9 @@
 <div>
   <div class="col-md-6 px-0">
     <h1 class="display-4 font-italic">My Blog</h1>
-    <p class="lead my-3"><%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %></p>
+    <p class="lead my-3">
+      <%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %>
+      <%= link_to 'Topics', topics_path %>
+    </p>
   </div>
 </div>
