--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -144,3 +144,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: .8em;
   font-style: italic;
 }
+
+.breadcrumb-admin-actions a {
+  font-size: 1.25em;
+  margin: 0 10px 0 10px
+}
