--- a/app/views/portfolios/_portfolio_item.erb
+++ b/app/views/portfolios/_portfolio_item.erb
@@ -1,6 +1,6 @@
 <div class="col-md-4 portfolio-item-card" data-id="<%= portfolio_item.id %>">
   <div class="card mb-4 shadow-sm">
-    <%= image_tag portfolio_img(portfolio_item.thumb_image, 'thumb'), class: 'bd-placeholder-img card-img-top' unless portfolio_item.thumb_image.nil? %>
+    <%= image_tag portfolio_img(portfolio_item.thumb_image, 'thumb'), class: 'bd-placeholder-img card-img-top', width: '100%' unless portfolio_item.thumb_image.nil? %>
 
     <div class="card-body">
       <p class="card-text">
